Mon Dec 29 22:05:45 1997  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gdk/gdkgc.c (gdk_gc_copy): New function, used to copy the values
	from one gc to another gc.

Sat Dec 27 20:39:99 1997  Elliot Lee <sopwith@redhat.com>
	* gtk/gtkhandlebox.c: It mostly works now, please test it and make
	fixes as needed.
Fri Dec 26 11:20:03 1997  Scott Goehring  <scott@poverty.bloomington.in.us>

	* gtk/Makefile.am (gtkinclude_HEADERS): added gtkhandlebox.c

	* gtk/gtkhandlebox.c (gtk_handle_box_reparent): eliminated a
	compiler warning caused by not casting an argument in a debugging
	message. :)

Fri Dec 26 02:59:39 1997  Federico Mena  <federico@bananoid.nuclecu.unam.mx>

	* gdk/gdktypes.h gdk/gdk.c gdk/gdkwindow.c: Added new
 	GDK_NO_EXPOSE and GDK_VISIBILITY_NOTIFY events.  They are needed
 	for Alan Cox's TV widget and for GtkXmHTML.  Only missing with
 	respect to their Xlib counterparts are the major_code and
 	minor_code fields from the GdkEventNoExpose structure.  Does
 	anyone need them?

Tue Dec 23 03:03:17 1997  Tim Janik  <timj@psynet.net>

	* gtk/gtkscrolledwindow.c (SCROLLBAR_SPACING): this macro computes
	the spacing from klass->scrollbar_spacing now. adapted all functions
	that used this macro (based on a patch from Patrice Fortier).
	* gtk/gtkscrolledwindow.h (struct _GtkScrolledWindowClass): added
	scrollbar_spacing to substitute a define (patch from Patrice Fortier).

	* gtk/gtkrc.h (gtk_rc_parse_string): new function.
	* gtk/gtkrc.c: many functions adapted to use GScanner for scanning.
 	(gtk_rc_parse): use gtk_rc_parse_any for parsing.
	(gtk_rc_parse_string): new function to support parsing from
	strings, just calls gtk_rc_parse_any.
	(gtk_rc_parse_any): new function using GScanner as lexer.

Thu Dec 18 23:46:11 CST 1997 Shawn T. Amundson <amundson@gimp.org>

        * GDK support for 1 bpp depth screens.

Thu Dec 18 23:46:11 CST 1997 Shawn T. Amundson <amundson@gimp.org>

	* Changes from Bolliet Jerome <bolliet@in2p3.fr> to gtktree.