@@ -1,3 +1,7 @@
+Thu Jan  1 19:43:45 PST 1998 Manish Singh <yosh@gimp.org>
+
+	* Miscellaneous portability fixes.
+
 Mon Dec 29 22:05:45 1997  Miguel de Icaza  <miguel@nuclecu.unam.mx>
 
 	* gdk/gdkgc.c (gdk_gc_copy): New function, used to copy the values
